Bug 1328131 - reset charset since protocol object is reused by NNTP. r=mkmelin